[gd_scene load_steps=9 format=3 uid="uid://dulgiqt6d7tbw"]

[ext_resource type="Script" path="res://interface.gd" id="1_56li5"]
[ext_resource type="PackedScene" uid="uid://mh1njj8cqf6h" path="res://surface_descriptor.tscn" id="2_581jl"]
[ext_resource type="Script" path="res://PickSurface.gd" id="2_m6lpy"]
[ext_resource type="Script" path="res://not_unique.gd" id="4_0w6tl"]
[ext_resource type="Script" path="res://line_edit_no_funny.gd" id="5_m7gke"]
[ext_resource type="Script" path="res://SearchResults.gd" id="6_es8me"]
[ext_resource type="PackedScene" uid="uid://cwhkswjld3pi4" path="res://container_view.tscn" id="6_ntvm5"]
[ext_resource type="PackedScene" uid="uid://blkwhcxtbv5bx" path="res://search_result.tscn" id="7_piaqe"]

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_56li5")
descriptor_scene = ExtResource("2_581jl")
container_view_scene = ExtResource("6_ntvm5")

[node name="PickSurface" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_m6lpy")

[node name="ScrollContainer" type="ScrollContainer" parent="PickSurface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 157.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PickSurface/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PickSurface"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.0143478
grow_horizontal = 2
text = "Select a surface"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PickSurface"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 54.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_constants/separation = 5

[node name="Button" type="Button" parent="PickSurface/VBoxContainer"]
layout_mode = 2
text = "New Surface"
metadata/_edit_use_anchors_ = true

[node name="SearchBar" type="LineEdit" parent="PickSurface/VBoxContainer"]
layout_mode = 2
placeholder_text = "Search everything"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MakeSurface" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="MakeSurface"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 88.0
offset_bottom = 119.0
grow_horizontal = 2
placeholder_text = "enter surface name"
alignment = 1
script = ExtResource("5_m7gke")

[node name="NotUnique" type="Label" parent="MakeSurface"]
visible = false
layout_mode = 0
offset_left = 61.0
offset_top = 68.0
offset_right = 1076.0
offset_bottom = 555.0
text = "ENTER A UNIQUE SURFACE NAME"
horizontal_alignment = 1
script = ExtResource("4_0w6tl")

[node name="Timer" type="Timer" parent="MakeSurface/NotUnique"]
one_shot = true

[node name="SurfaceView" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContainerView" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SearchResults" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_es8me")
search_result_scene = ExtResource("7_piaqe")

[node name="Label" type="Label" parent="SearchResults"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "SEARCH RESULTS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SearchResults"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SearchResults/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="."]
layout_mode = 1
offset_right = 8.0
offset_bottom = 8.0
text = "BACK"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "SAVE"

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -15.5
offset_right = 21.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.377919, 0.377919, 0.377919, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "--------------- QUIT? make sure to save if you intented to --------------- "

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back
"

[node name="Data" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Show data folder
"

[node name="ExportButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Export string to clipboard
"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ImportButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.831373, 0, 0, 1)
text = "Import string from clipboard
(OVERWRITES MEMORY)"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "Save 'n Quit"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.831373, 0, 0, 1)
text = "Quit and lose my changes"

[connection signal="pressed" from="PickSurface/VBoxContainer/Button" to="." method="set_state" binds= [1]]
[connection signal="text_submitted" from="PickSurface/VBoxContainer/SearchBar" to="." method="run_search"]
[connection signal="text_submitted" from="MakeSurface/LineEdit" to="." method="add_surface"]
[connection signal="timeout" from="MakeSurface/NotUnique/Timer" to="MakeSurface/NotUnique" method="dissapear"]
[connection signal="pressed" from="Button" to="." method="back"]
[connection signal="pressed" from="SaveButton" to="." method="do_save"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="back"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Data" to="." method="_on_data_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExportButton" to="." method="_on_export_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ImportButton" to="." method="_on_import_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="do_save" binds= [true]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="quit"]
